[gd_scene load_steps=8 format=3 uid="uid://xva3qbqb4k5o"]

[ext_resource type="Script" path="res://src/playspace.gd" id="1_hjvjc"]
[ext_resource type="PackedScene" uid="uid://c0hbi7fqujvbn" path="res://src/farm/background.tscn" id="2_2qbwg"]
[ext_resource type="PackedScene" uid="uid://bbmiskr3ha0we" path="res://src/farm/farm.tscn" id="2_4q20t"]
[ext_resource type="PackedScene" uid="uid://cswinrop881oo" path="res://src/user_interface.tscn" id="7_xiqpp"]
[ext_resource type="PackedScene" uid="uid://dn6mjla5pvtrh" path="res://src/cards/cards.tscn" id="16_bvmlh"]
[ext_resource type="PackedScene" uid="uid://bc8n6jk05ybsj" path="res://src/turn_manager/turn_manager.tscn" id="19_dlhyr"]
[ext_resource type="PackedScene" uid="uid://cjdwiax30iity" path="res://src/listener/event_manager.tscn" id="21_bbo6d"]

[node name="Playspace" type="Node2D"]
script = ExtResource("1_hjvjc")

[node name="Background" parent="." instance=ExtResource("2_2qbwg")]

[node name="FarmTiles" parent="." instance=ExtResource("2_4q20t")]

[node name="Cards" parent="." instance=ExtResource("16_bvmlh")]

[node name="TurnManager" parent="." instance=ExtResource("19_dlhyr")]

[node name="EventManager" parent="." instance=ExtResource("21_bbo6d")]

[node name="UserInterface" parent="." instance=ExtResource("7_xiqpp")]

[connection signal="card_played" from="FarmTiles" to="." method="_on_farm_tiles_card_played"]
[connection signal="no_energy" from="FarmTiles" to="UserInterface" method="_on_farm_tiles_no_energy"]
[connection signal="on_card_draw" from="FarmTiles" to="." method="_on_farm_tiles_on_card_draw"]
[connection signal="on_energy_gained" from="FarmTiles" to="." method="_on_farm_tiles_on_energy_gained"]
[connection signal="on_hide_tile_preview" from="FarmTiles" to="UserInterface" method="_on_farm_tiles_on_hide_tile_preview"]
[connection signal="on_preview_yield" from="FarmTiles" to="UserInterface" method="_on_farm_tiles_on_preview_yield"]
[connection signal="on_show_tile_preview" from="FarmTiles" to="UserInterface" method="_on_farm_tiles_on_show_tile_preview"]
[connection signal="on_yield_gained" from="FarmTiles" to="." method="_on_farm_tiles_on_yield_gained"]
[connection signal="try_move_structure" from="FarmTiles" to="." method="_on_farm_tiles_try_move_structure"]
[connection signal="after_farm_expanded" from="UserInterface" to="FarmTiles" method="on_expand_farm"]
[connection signal="apply_upgrade" from="UserInterface" to="." method="on_upgrade"]
[connection signal="end_turn_button_pressed" from="UserInterface" to="." method="on_turn_end"]
[connection signal="farm_preview_hide" from="UserInterface" to="FarmTiles" method="_on_user_interface_farm_preview_hide"]
[connection signal="farm_preview_show" from="UserInterface" to="FarmTiles" method="_on_user_interface_farm_preview_show"]
[connection signal="on_blight_removed" from="UserInterface" to="." method="_on_user_interface_on_blight_removed"]
[connection signal="on_main_menu" from="UserInterface" to="." method="_on_user_interface_on_main_menu"]
[connection signal="on_next_year" from="UserInterface" to="." method="start_year"]
[connection signal="on_skip" from="UserInterface" to="." method="end_year" binds= [false]]
